objects/LOTUS_case_from_Opportunity_field_DOM__mdt.object
<CustomObject>
    <fields>
        <fullName>AccountId_DOM__c</fullName>
        <label>AccountId DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_DOM__c</fullName>
        <label>Brand DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_DOM__c</fullName>
        <label>Issue DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId_DOM__c</fullName>
        <label>OpportunityId DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName_DOM__c</fullName>
        <label>OpportunityName DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductTitle_DOM__c</fullName>
        <label>ProductTitle DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_DOM__c</fullName>
        <label>Reason DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactId_DOM__c</fullName>
        <label>contactId_DOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>LOTUS case from Opportunity field DOM</label>
    <pluralLabel>LOTUS case from Opportunity field DOMs</pluralLabel>
</CustomObject>